--- a/styles.css
+++ b/styles.css
@@ -35,9 +35,8 @@ h1, p{
 
 .item{
     position: relative;
-    size: relative;
-    width: 20%;
-    height: 20%;
+    width: 22.5%;
+    height: 22.5%;
     object-fit: cover;
     padding: 20px;
     border-radius: 60px;
@@ -45,8 +44,18 @@ h1, p{
 
 .stamp1{
     position: absolute;
-    left:100px;
-    top: 270px;
+    left: 150px;
+    top: 310px;
+    height: 20%;
+
+    
+}
+
+.stamp01{
+    position: absolute;
+    left:170px;
+    top:500px;
+    font-size: 50px;
 }
 
 .notavailable{
@@ -59,10 +68,12 @@ h1, p{
     font-weight: bold;
 }
 
-
-.stamp01{
-    position: absolute;
-    left: 95px;
-    top: 385px;
-    font-size: 50px;
+.item1{
+    position: relative;
+    size: relative;
+    width: 20%;
+    height: 20%;
+    object-fit: cover;
+    padding: 20px;
+    border-radius: 60px;
 }
