--- a/styles.css
+++ b/styles.css
@@ -200,7 +200,83 @@ h1, p{
 }
 
 .footer{
-height: 25%;
-background-color: white;
+    position: relative;
+    height: 25%;
+    background-color: white;
 }
 
+.footer2{
+    position: relative;
+    height: 25%;
+    background-color: white;
+    text-align: center;
+    top: 130px;
+    width: 100%;
+}
+
+
+.mit{
+    text-align: center;
+    margin-top: 0.50rem;
+    font-size: 1.5rem;
+    font-weight: bold;
+    font-family: 'Courier New', Courier, monospace;
+    font-style: italic;
+}
+
+.webstore{
+    text-align: right;
+    margin-top: 0.50rem;
+    font-size: 1.5rem;
+    font-weight: bold;
+    font-family: 'Courier New', Courier, monospace;
+    font-style: italic;
+}
+
+.partner{
+    text-align: left;
+    margin-top: 0.50rem;
+    font-size: 1.5rem;
+    font-weight: bold;
+    font-family: 'Courier New', Courier, monospace;
+    font-style: italic;
+    font-size: 1.5rem;
+}
+
+.lie{
+    text-align: center;
+    margin-top: 0.50rem;
+    font-size: 1.5rem;
+    font-weight: bold;
+    font-family: 'Courier New', Courier, monospace;
+    font-style: italic;
+}
+
+.image{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+}
+
+.biztos{
+    position: absolute;
+    rotate: 45deg;
+    left: 360px;
+    top: 400px;
+    text-align: center;
+    font-weight: bold;
+    font-family: 'Courier New', Courier, monospace;
+    font-style: italic;
+}
+
+.arrow{
+    position: absolute;
+    left: 50px;
+    top: 90px;
+    width: 5%;
+    text-align: center;
+    font-weight: bold;
+    font-family: 'Courier New', Courier, monospace;
+    font-style: italic;
+}
