--- a/styles.css
+++ b/styles.css
@@ -270,4 +270,157 @@ h1, p{
     .image{
         width: 450px;
     }
+
+    .item{
+        position: relative;
+        width: 40%;
+        height: 35%;
+        object-fit: cover;
+        padding: 20px;
+        border-radius: 60px;
+        align-items: flex-start;
+    }
+    
+    .stamp1{
+        position: absolute;
+        left: 80px;
+        top: 310px;
+        height: 10%;
+        align-items: flex-start;
+    
+        
+    }
+    
+    .stamp01{
+        position: absolute;
+        left:80px;
+        top:380px;
+        font-size: 30px;
+        align-items: flex-start;
+    }
+    
+    
+    .stamp2{
+        position: absolute;
+        left: 300px;
+        top: 310px;
+        height: 10%;
+        align-items: flex-start;
+    }
+    
+    .stamp02{
+        position: absolute;
+        left:300px;
+        top:380px;
+        font-size: 30px;
+        align-items: flex-start;
+    }
+    
+    .stamp3{
+        position: absolute;
+        left: 80px;
+        top: 525px;
+        height: 10%;
+        align-items: flex-start;
+    }
+    
+    .stamp03{
+        position: absolute;
+        left:55px;
+        top:610px;
+        font-size: 30px;
+        align-items: flex-start;
+    }
+    
+    .stamp4{
+        position: absolute;
+        left: 300px;
+        top: 525px;
+        height: 10%;
+        align-items: flex-start;
+    }
+    
+    .stamp04{
+        position: absolute;
+        left:280px;
+        top:610px;
+        font-size: 30px;
+        align-items: flex-start;
+    }
+    
+    .stamp5{
+        position: absolute;
+        left: 40px;
+        top: 745px;
+        height: 10%;
+        align-items: flex-start;
+    }
+    
+    .stamp05{
+        position: absolute;
+        left:75px;
+        top:825px;
+        font-size: 35px;
+        align-items: flex-start;
+    }
+    
+    .stamp6{
+        position: absolute;
+        left: 300px;
+        top: 750px;
+        height: 10%;
+        align-items: flex-start;
+    }
+    
+    .stamp06{
+        position: absolute;
+        left:285px;
+        top:835px;
+        font-size: 30px;
+        align-items: flex-start;
+    }
+    
+    .stamp7{
+        position: absolute;
+        left: 65px;
+        top: 975px;
+        height: 10%;
+        align-items: flex-start;
+    }
+    
+    .stamp07{
+        position: absolute;
+        left:80px;
+        top:1050px;
+        font-size: 30px;
+        align-items: flex-start;
+    }
+    
+    .stamp8{
+        position: absolute;
+        left: 285px;
+        top: 975px;
+        height: 10%;
+        align-items: flex-start;
+    }
+    
+    .stamp08{
+        position: absolute;
+        left:300px;
+        top:1050px;
+        font-size: 30px;
+        align-items: flex-start;
+    }
+
+    .arrow{
+        position: absolute;
+        left: 50px;
+        top: 90px;
+        width: 10%;
+        text-align: center;
+        font-weight: bold;
+        font-family: 'Courier New', Courier, monospace;
+        font-style: italic;
+    }
+
 }
