o7 for the website its ded

--- a/styles.css
+++ b/styles.css
@@ -265,171 +265,4 @@ h1, p{
     font-family: 'Courier New', Courier, monospace;
     font-style: italic;
 }
-
-@media screen and (min-width: 360px) and (min-height: 800px){
-    
-    h1, p{
-        color:  #00246B;
-        font-size: 30px;
-        font-family: 'Courier New', Courier, monospace;
-        font-style: italic;
-        text-align: center;
-    }
-    
-    .image{
-        width: 450px;
-    }
-
-    .item{
-        position: relative;
-        width: 35%;
-        height: 35%;
-        object-fit: cover;
-        padding: 20px;
-        border-radius: 60px;
-        align-items: flex-start;
-    }
-    
-    .stamp1{
-        position: absolute;
-        left: 62.5px;
-        top: 290px;
-        height: 8%;
-        align-items: flex-start;
-    
-        
-    }
-    
-    .stamp01{
-        position: absolute;
-        left:55px;
-        top:350px;
-        font-size: 15px;
-        align-items: flex-start;
-    }
-    
-    
-    .stamp2{
-        position: absolute;
-        left: 225px;
-        top: 290px;
-        height: 8%;
-        align-items: flex-start;
-    }
-    
-    .stamp02{
-        position: absolute;
-        left:215px;
-        top:350px;
-        font-size: 15px;
-        align-items: flex-start;
-    }
-    
-    .stamp3{
-        position: absolute;
-        left: 80px;
-        top: 525px;
-        height: 10%;
-        align-items: flex-start;
-    }
-    
-    .stamp03{
-        position: absolute;
-        left:55px;
-        top:610px;
-        font-size: 30px;
-        align-items: flex-start;
-    }
-    
-    .stamp4{
-        position: absolute;
-        left: 300px;
-        top: 525px;
-        height: 10%;
-        align-items: flex-start;
-    }
-    
-    .stamp04{
-        position: absolute;
-        left:280px;
-        top:610px;
-        font-size: 30px;
-        align-items: flex-start;
-    }
-    
-    .stamp5{
-        position: absolute;
-        left: 40px;
-        top: 745px;
-        height: 10%;
-        align-items: flex-start;
-    }
-    
-    .stamp05{
-        position: absolute;
-        left:75px;
-        top:825px;
-        font-size: 35px;
-        align-items: flex-start;
-    }
-    
-    .stamp6{
-        position: absolute;
-        left: 300px;
-        top: 750px;
-        height: 10%;
-        align-items: flex-start;
-    }
-    
-    .stamp06{
-        position: absolute;
-        left:285px;
-        top:835px;
-        font-size: 30px;
-        align-items: flex-start;
-    }
-    
-    .stamp7{
-        position: absolute;
-        left: 65px;
-        top: 975px;
-        height: 10%;
-        align-items: flex-start;
-    }
-    
-    .stamp07{
-        position: absolute;
-        left:80px;
-        top:1050px;
-        font-size: 30px;
-        align-items: flex-start;
-    }
-    
-    .stamp8{
-        position: absolute;
-        left: 285px;
-        top: 975px;
-        height: 10%;
-        align-items: flex-start;
-    }
-    
-    .stamp08{
-        position: absolute;
-        left:300px;
-        top:1050px;
-        font-size: 30px;
-        align-items: flex-start;
-    }
-
-    .arrow{
-        position: absolute;
-        left: 30px;
-        top: 95px;
-        width: 10%;
-        text-align: center;
-        font-weight: bold;
-        font-family: 'Courier New', Courier, monospace;
-        font-style: italic;
-    }
-
-}
+@
